--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,36 @@
-LibCSV.suo
-LibCSV\bin
-LibCSV\obj
-TestLibCSV\bin
-TestLibCSV\obj
-TestResults
+#OS junk files
+[Th]humbs.db
+*.DS_Store
+
+#Visual Studio files
+*.[Oo]bj
+*.user
+*.aps
+*.pch
+*.vspscc
+*.vssscc
+*._i.c
+*._p.c
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.[Cc]ache
+*.ilk
+*.log
+*.lib
+*.sbr
+*.sdf
+*.opensdf
+*.unsuccessfulbuild
+ipch/
+obj/
+[Bb]in
+[Dd]ebug
+[Rr]elease
+[Tt]est[Rr]esult*
+
+# Office Temp Files
+~$*
+
+#app specific
