Add escape test

--- a/TestLibCSV/TestLibCSV.csproj
+++ b/TestLibCSV/TestLibCSV.csproj
@@ -70,6 +70,9 @@
     <None Include="TestCSV_UTF8_CRLF.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="TestCSV_Escape.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
