--- a/TestLibCSV/TestLibCSV.csproj
+++ b/TestLibCSV/TestLibCSV.csproj
@@ -53,6 +53,7 @@
     <Compile Include="CSVHeaderAttributeTest.cs" />
     <Compile Include="CSVSourceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CSVAttributeTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibCSV\LibCSV.csproj">
