型変換部分をCSVSource.ITypeResolverに切り出し、外部から変更できるようにした。

--- a/TestLibCSV/TestLibCSV.csproj
+++ b/TestLibCSV/TestLibCSV.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CSVSourceTest.cs" />
     <Compile Include="CSVTextWriterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeResolverTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibCSV\LibCSV.csproj">
