CSVHeaderAttribute has Default and InvalidAction

--- a/LibCSV/LibCSV.csproj
+++ b/LibCSV/LibCSV.csproj
@@ -41,10 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DefaultTypeResolver.cs" />
+    <Compile Include="CSVTypeResolver.cs" />
     <Compile Include="CSVSource.cs" />
     <Compile Include="CSVTextWriter.cs" />
-    <Compile Include="ITypeResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
