--- a/LibCSV/LibCSV.csproj
+++ b/LibCSV/LibCSV.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSVInvalidValueException.cs" />
     <Compile Include="CSVTypeResolver.cs" />
     <Compile Include="CSVSource.cs" />
     <Compile Include="CSVTextWriter.cs" />
