Implemented two constraints of columns.
* column is multiple-selection.
* it is forbidden that column is empty.

--- a/LibCSV/LibCSV.csproj
+++ b/LibCSV/LibCSV.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSVValueWrongOptionException.cs" />
+    <Compile Include="CSVValueEmptyException.cs" />
     <Compile Include="CSVInvalidValueException.cs" />
     <Compile Include="CSVTypeResolver.cs" />
     <Compile Include="CSVSource.cs" />
