--- a/TestLibCSV/TestLibCSV.csproj
+++ b/TestLibCSV/TestLibCSV.csproj
@@ -54,6 +54,7 @@
     <Compile Include="CSVHeaderAttributeTest.cs" />
     <Compile Include="CSVIgnoreAttributeTest.cs" />
     <Compile Include="CSVSourceTest.cs" />
+    <Compile Include="CSVTextReaderTest.cs" />
     <Compile Include="CSVTextWriterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeResolverTest.cs" />
