--- a/LibCSV/LibCSV.nuspec
+++ b/LibCSV/LibCSV.nuspec
@@ -2,15 +2,18 @@
 <package >
   <metadata>
     <id>LibCSV</id>
-    <version>1.1.2</version>
+    <version>1.1.3</version>
     <title>LibCSV</title>
     <authors>Wataru Uda</authors>
     <owners>Wataru Uda</owners>
     <projectUrl>https://github.com/udawtr/LibCSV</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Reading and writing CSV formatted files.</description>
-    <releaseNotes>Add CSVTextReader.ReadAll</releaseNotes>
-    <copyright>Copyright 2012</copyright>
+    <releaseNotes>
+      * CSVSource.Load donot require write permission
+      * Fix: double quoted string parsing error
+    </releaseNotes>
+    <copyright>Copyright 2015</copyright>
     <tags>CSV</tags>
   </metadata>
 </package>
